AC_INIT(checkcrc.c)
#AC_PREREQ(2.61)

AM_INIT_AUTOMAKE(checkcrc,0.1.0)
AM_CONFIG_HEADER(config.h:config.in)

AC_PROG_CC
AC_PROG_INSTALL

AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h stdlib.h string.h sys/types.h inttypes.h regex.h unistd.h,,AC_MSG_ERROR([Some header files not found. Install missing headers and retry.]))

AC_OUTPUT(Makefile)
